--- a/appetizers.html
+++ b/appetizers.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src="Foodihut/logo-nobg.png" alt="Logo image" height="100" width="100" class="logo">
+    <img src="https://github.com/elllia/try3/blob/main/logo-nobg.png" alt="Logo image" height="100" width="100" class="logo">
     <nav class="navbar">
       <a class="active" href="index.html" > Home </a>
       <div class="dropdown">
