--- a/appetizers.html
+++ b/appetizers.html
@@ -115,7 +115,7 @@
 
 <div class="box">
   <div class="image">
-  <img src="pics/Appetizers/img6.PNG" alt="" height="100px" width="100px">
+  <img src="../pics/Appetizers/img6.PNG" alt="" height="100px" width="100px">
 </div>
 <div class="content">
   <h3> Onion Rings</h3>
@@ -127,7 +127,7 @@
  
 <div class="box">
   <div class="image">
-  <img src="pics/Appetizers/img7.PNG" alt="" height="100px" width="100px">
+  <img src="../pics/Appetizers/img7.PNG" alt="" height="100px" width="100px">
 
 </div>
 <div class="content">
